pin kernel version

--- a/modules/90-network.yml
+++ b/modules/90-network.yml
@@ -13,7 +13,8 @@ source:
   - modemmanager
   - wpasupplicant
   - wireless-tools
-  - wireguard
+  # removed temporarily to avoid changing kernel version 
+  # - wireguard
   - avahi-autoipd
   - avahi-daemon
   - rfkill
