--- a/modules/01-kernel.yml
+++ b/modules/01-kernel.yml
@@ -2,5 +2,7 @@ name: kernel
 type: apt
 source:
   packages:
-  - linux-image-amd64
-  - linux-headers-amd64
+  - linux-image-6.12.9-amd64
+  # removed temporarily to avoid changing kernel version
+  # - linux-image-amd64
+  # - linux-headers-amd64
