Revert "pin kernel version"
This reverts commit e2596ecdd7bd6553d202547f08bd62863a4a8a68.

--- a/modules/90-network.yml
+++ b/modules/90-network.yml
@@ -13,8 +13,7 @@ source:
   - modemmanager
   - wpasupplicant
   - wireless-tools
-  # removed temporarily to avoid changing kernel version 
-  # - wireguard
+  - wireguard
   - avahi-autoipd
   - avahi-daemon
   - rfkill
