--- a/modules/100-modules.yml
+++ b/modules/100-modules.yml
@@ -7,5 +7,6 @@ source:
   - inputattach
   - iucode-tool
   - cryptsetup-initramfs
-  - acpi-call-dkms
+  # remove temporarily due to build error
+  # - acpi-call-dkms
   - libsasl2-modules
