fix/main: remove pinned kernel
Signed-off-by: K.B.Dharun Krishna <kbdharunkrishna@gmail.com>

--- a/modules/100-modules.yml
+++ b/modules/100-modules.yml
@@ -7,6 +7,5 @@ source:
   - inputattach
   - iucode-tool
   - cryptsetup-initramfs
-  # remove temporarily due to build error
-  # - acpi-call-dkms
+  - acpi-call-dkms
   - libsasl2-modules
