feat: replace chrony with systemd-timesyncd

--- a/modules/90-network.yml
+++ b/modules/90-network.yml
@@ -22,5 +22,5 @@ source:
   - libspa-0.2-bluetooth
   - libnss-mdns
   - libproxy1-plugin-networkmanager
-  - chrony
+  - systemd-timesyncd
   - iputils-ping
