Update vib to v1.0.2

--- a/modules/30-utils.yml
+++ b/modules/30-utils.yml
@@ -1,13 +1,13 @@
 name: utils
 type: apt
-source:
-  packages:
-  - nano
-  - zsync
-  - rsync
-  - dialog
-  - less
-  - curl
-  - tracker
-  - bash-completion
-  - libnss-myhostname
+sources:
+  - packages:
+    - nano
+    - zsync
+    - rsync
+    - dialog
+    - less
+    - curl
+    - tracker
+    - bash-completion
+    - libnss-myhostname
