--- a/modules/01-kernel.yml
+++ b/modules/01-kernel.yml
@@ -1,6 +1,6 @@
 name: kernel
 type: apt
-source:
-  packages:
-  - linux-image-amd64
-  - linux-headers-amd64
+sources:
+  - packages:
+    - linux-image-amd64
+    - linux-headers-amd64
