--- a/modules/110-fwupd.yml
+++ b/modules/110-fwupd.yml
@@ -1,6 +1,6 @@
 name: fwupd
 type: apt
-source:
-  packages:
-  - fwupd
-  - fwupd-amd64-signed
+sources:
+  - packages:
+    - fwupd
+    - fwupd-amd64-signed
