--- a/modules/140-manpages.yml
+++ b/modules/140-manpages.yml
@@ -1,6 +1,6 @@
 name: manpages
 type: apt
-source:
-  packages:
-  - manpages
-  - manpages-posix
+sources:
+  - packages:
+    - manpages
+    - manpages-posix
