--- a/modules/60-sound.yml
+++ b/modules/60-sound.yml
@@ -1,10 +1,10 @@
 name: sound
 type: apt
-source:
-  packages:
-  - pipewire-pulse
-  - pipewire-alsa
-  - wireplumber
-  - alsa-utils
-  - alsa-firmware-loaders
-  - libasound2t64
+sources:
+  - packages:
+    - pipewire-pulse
+    - pipewire-alsa
+    - wireplumber
+    - alsa-utils
+    - alsa-firmware-loaders
+    - libasound2t64
