--- a/modules/70-compression.yml
+++ b/modules/70-compression.yml
@@ -1,7 +1,7 @@
 name: compression
 type: apt
-source:
-  packages:
-  - zstd
-  - zip
-  - unzip
+sources:
+  - packages:
+    - zstd
+    - zip
+    - unzip
