--- a/modules/00-vanilla-apx-stacks.yml
+++ b/modules/00-vanilla-apx-stacks.yml
@@ -1,9 +1,9 @@
 name: apx-stacks
 type: shell
-source:
-  type: git
-  url: https://github.com/Vanilla-OS/vanilla-apx-configs.git
-  tag: v1.0.0
+sources:
+  - type: git
+    url: https://github.com/Vanilla-OS/vanilla-apx-configs.git
+    tag: v1.0.0
 commands:
 - mkdir -p /usr/share/apx
 - mv /sources/apx-stacks/stacks /usr/share/apx/
